# circle_led

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  circle.html  devbox.json  display.js  docker-compose.yaml  fireworks.js  fullscreen.js  index.html  mobile.js  play.js
.github/workflows/: docker-build.yaml
assets/: main.css  manifest.json
m5atom/show_circle/: show_circle.ino
src/: board.rs  common.rs  display.rs  main.rs  server.rs
src/games/: drop.rs  idle.rs  mod.rs  snake.rs  snake_board.rs
