[package]
name = "circle_led"
version = "0.1.0"
authors = ["Linus Gasser <linus.gasser@epfl.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router", "fullstack"] }
dioxus-fullstack = "0.6"
serde = "1.0.216"
strum = "0.26.3"
strum_macros = "0.26.4"

rand = { version = "0.8.5", optional = true }
async-std = "1.13.0"
tracing = "0.1.41"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:rand"]
ssr = ["dioxus/ssr"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
