[package]
name = "circle_led"
version = "0.1.0"
authors = ["Linus Gasser <linus.gasser@epfl.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
dioxus = { version = "0.6", features = ["router", "fullstack"] }
dioxus-fullstack = "0.6"
dioxus-logger = "0.6.1"
serde = "1.0.216"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = "0.1.41"

axum = { version = "0.7.0", optional = true }
dioxus-cli-config = { version = "*", optional = true }
futures = { version = "0.3", optional = true }
rand = { version = "0.8.5", optional = true }
web-sys = { version = "0.3.64", features = [
    "Window",
    "Location",
], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:web-sys"]
server = [
    "dioxus/server",
    "dep:rand",
    "dep:axum",
    "dep:tokio",
    "dep:dioxus-cli-config",
    "dep:tokio-stream",
    "dep:futures",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
